--- a/src/app/docs/docs.component.html
+++ b/src/app/docs/docs.component.html
@@ -18,8 +18,9 @@
             <span class="fa fa-check text-success" *ngIf="d.recebido==1"> </span>
           </a>
         </div>
-        <div class="flex-1 d-flex align-content-stretch" *ngIf="d.status==8 || d.status==21 || d.status==37"
+        <div class="flex-1 d-flex align-content-stretch" *ngIf="d.status==8 || d.status==9 || d.status==21 || d.status==38"
           title="Anexar outro ficheiro para este documento!">
+          <!--botão para anexar outro -->
           <a *ngIf="d.recebido==1" class="list-group-item list-group-item-action d-flex align-items-center"
             routerLink="/capture" [queryParams]="{lead: d.lead, linha: d.linha}">
             <span class="fa fa-plus text-info text-center"><small> </small></span>
@@ -33,38 +34,15 @@
       </a>
     </div>
     <div class="text-center mt-3">
-      <button class="btn btn-outline-warning" routerLink="/">Finalizar</button>
+      <button class="btn btn-outline-warning" *ngIf="!missingDocs && showBtnFinalizar" (click)="finalizar()">Finalizar</button>
+    </div>
+  </div>
+
+  <div *ngIf="showSpiner" class="d-flex justify-content-center">
+    <div class="spinner-border" role="status">
+      <span class="sr-only">Loading...</span>
     </div>
   </div>
 
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="anexarModal" tabindex="-1" role="dialog" aria-labelledby="anexar" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Anexar Documento</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h6 class="text-info">{{docSelected.nomedoc}}</h6>
-        <p>Instruções:</p>
-        <p><small>Deverá selecionar um documento no formato PDF e que tenha um tamanho inferior a 4Mbytes.
-            Caso não tenha o documento em PDF poderá usar o este <a href="https://smallpdf.com/pt"
-              __target="blanck">link</a> para o converter, facilmente e sem custos.
-          </small></p>
-        <input name="docToUpload" type="file" accept="pdf/*" ngModel
-          (change)="handleInputChange($event, docSelected )" />
-        <div class="alert alert-danger" *ngIf="erro"><small>{{erro}}</small></div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-warning" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary" [disabled]="erro || !loaded" data-dismiss="modal"
-          (click)="confirmaAnexar()">Confirmar</button>
-      </div>
-    </div>
-  </div>
-</div>
