--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
     <p>A <strong>GEST</strong>LIFES, FINANCE SOLUTIONS FOR YOUR LIFE, é uma marca regista da Embrace Calculus, Unip. Lda,
        com o NIF: 513 476 121 e com sede na Rua de Camões n.111 Sala 11 2ºandar, 4000-144 Porto.
       Encontra-se registada e autorizada pelo Banco de Portugal, como <u>Intermediário de crédito vinculado nº 0001409</u>,
-       seguro de responsabilidade civil assegurado pela Hiscox, com a apólice nº 2510343 válido até 18-06-2019.
+       seguro de responsabilidade civil assegurado pela Hiscox, com a apólice nº 2510343 válido até 18-06-2020.
       A <strong>GEST</strong>LIFES no âmbito das suas funções devidamente autorizadas pelo Banco de Portugal, desdobra-se nas seguintes formas:</p>
 
       <ul>
@@ -23,4 +23,7 @@
       <li>No Centro Nacional de Informação e Arbitragem de Conflitos de Consumo (CNIACC), www.cniacct.pt / geral@cniacc.pt / +351 253 619 107;</li>
       <li>No Centro de Informação de Consumo e Arbitragem de Porto (CICAP),www.cicap.pt / cicap@cicap.pt / +351 225 029 791.</li>
     </ul> 
+    <div class="copyright">
+      <p><a href="http://jsalgado.com" target="_blank">Desenvolvido por JSalgado Consultoria 2018</a></p>
+    </div>
   </div>
