--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -23,20 +23,23 @@
 
             <div class="col-9 col-md-4 mb-3 form-group pl-3">
               <label for="validationNome">Nome</label>
-              <input type="text" class="form-control"  [class.ng-touched]="showAlert" id="validationNome" [(ngModel)]="lead.nome" name="nome" #nome="ngModel" required>
+              <input type="text" class="form-control"  [class.ng-touched]="showAlert" id="validationNome"
+                     [(ngModel)]="lead.nome" name="nome" #nome="ngModel"
+                      required [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!nome.valid && nome.touched">Necessário um nome</div>
             </div>
 
             <div class="col-3 col-md-1 mb-3 form-group pl-3">
               <label for="validationIdade">Idade</label>
               <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationIdade" name="idade" [(ngModel)]="lead.idade" min="18"
-                #idade="ngModel" required>
+                #idade="ngModel" required  [readonly]="readOnly">
                 <div class="alert alert-danger" *ngIf="!idade.valid && idade.touched">Indique a sua idade.</div>
             </div>
 
             <div class="col-5 col-md-2 mb-3 form-group pl-3">
               <label for="validaTelefone">Telefone</label>
-              <input type="tel" class="form-control" [class.ng-touched]="showAlert" id="validaTelefone" name="telefone" [(ngModel)]="lead.telefone" #telefone="ngModel" required minlength="9">
+              <input type="tel" class="form-control" [class.ng-touched]="showAlert" id="validaTelefone" name="telefone" 
+                  [(ngModel)]="lead.telefone" #telefone="ngModel" required minlength="9"  [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!telefone.valid && telefone.touched">
                 Telefone inválido
               </div>
@@ -44,7 +47,8 @@
 
             <div class="col-4 col-md-2 mb-3 form-group pl-3">
               <label for="validaNIF">NIF</label>
-              <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validaNIF" [(ngModel)]="lead.nif" name="nif" #nif="ngModel" required>
+              <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validaNIF"
+                 [(ngModel)]="lead.nif" name="nif" #nif="ngModel" required  [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!nif.valid && nif.touched">
                 NIF inválido
               </div>
@@ -53,31 +57,35 @@
             <div class="col-12 col-md-4 mb-3 form-group pl-3">
               <label for="validaEmail">Email</label>
               <div class="input-group">
-                <input type="text" class="form-control" [class.ng-touched]="showAlert" id="validaEmail" [(ngModel)]="lead.email" name="email" #email="ngModel" required>
+                <input type="text" class="form-control" [class.ng-touched]="showAlert" id="validaEmail"
+                   [(ngModel)]="lead.email" name="email" #email="ngModel" required  [readonly]="readOnly">
                 <div class="alert alert-danger" *ngIf="!email.valid && email.touched">
                   Email não é válido
                 </div>
               </div>
             </div>
 
+
             <div class="col-5 col-md-3 mb-3 form-group pl-3">
               <label for="validationEstadoCivil">Estado civil</label>
-              <select class="form-control" [class.ng-touched]="showAlert" id="validationEstadoCivil" [(ngModel)]="lead.estadocivil" name="estadocivil" #estadocivil="ngModel" required>
+              <select class="form-control" [class.ng-touched]="showAlert" id="validationEstadoCivil"
+                   [(ngModel)]="lead.estadocivil" name="estadocivil" #estadocivil="ngModel" required [disabled]="readOnly">
                 <option *ngFor="let ec of estados" [ngValue]="ec.id">{{ec.nome}}</option>
               </select>
-              <div class="alert alert-danger" *ngIf="!estadocivil.valid && estadocivil.touched">
+              <div class="alert alert-danger" *ngIf="!estadocivil.valid && estadocivil.touched" >
                 Obrigatório
               </div>
             </div>
 
             <div class="col-2 col-md-1 mb-3 form-group pl-3">
               <label for="validafilhos">Filhos</label>
-              <input type="number" class="form-control" id="validafilhos" name="filhos" [(ngModel)]="lead.filhos">
+              <input type="number" class="form-control" id="validafilhos" name="filhos" [(ngModel)]="lead.filhos"  [readonly]="readOnly">
             </div>
 
             <div class="col-5 col-md-3 mb-3 form-group pl-3">
               <label for="validationIRS">IRS</label>
-              <select class="form-control" [class.ng-touched]="showAlert" id="validationIRS" [(ngModel)]="lead.irs" name="irs" #irs="ngModel" required>
+              <select class="form-control" [class.ng-touched]="showAlert" id="validationIRS" [(ngModel)]="lead.irs"
+                   name="irs" #irs="ngModel" required [disabled]="readOnly">
                 <option value="Sim">Sim</option>
                 <option value="Sim junto">Sim, junto</option>
                 <option value="Sim separado">Sim, separado</option>
@@ -93,8 +101,9 @@
 
             <div class="col-6 col-md-4 mb-3 form-group pl-3">
               <label for="validationSitProf">Situação Profissional</label>
-              <select class="form-control" [class.ng-touched]="showAlert" id="validationSitProf" [(ngModel)]="lead.tipocontrato" name="tipocontrato" #tipocontrato="ngModel"
-                required>
+              <select class="form-control" [class.ng-touched]="showAlert" id="validationSitProf" 
+                  [(ngModel)]="lead.tipocontrato" name="tipocontrato" #tipocontrato="ngModel"
+                required  [disabled]="readOnly">
                 <option *ngFor="let s of situacoes" [ngValue]="s.id">{{s.nome}}</option>
               </select>
               <div class="alert alert-danger" *ngIf="!tipocontrato.valid && tipocontrato.touched">
@@ -105,7 +114,7 @@
             <div class="col-3 col-md-2 mb-3 form-group pl-3">
               <label for="validationVenc">Vencimento</label>
               <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationVenc" [(ngModel)]="lead.vencimento"
-                name="vencimento" #vencimento="ngModel" required min="100">
+                name="vencimento" #vencimento="ngModel" required min="100" [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!vencimento.valid && vencimento.touched">
                 Obrigatório
               </div>
@@ -114,7 +123,7 @@
             <div class="col-3 col-md-2 mb-3 form-group pl-3">
               <label for="validationDesde">Desde</label>
               <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationDesde" placeholder="ano" [(ngModel)]="lead.anoinicio" name="anoinicio"
-                #anoinicio="ngModel" required min="1900" max="2030">
+                #anoinicio="ngModel" required min="1900" max="2030" [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!anoinicio.valid && anoinicio.touched">
                 Obrigatório
               </div>
@@ -124,7 +133,8 @@
           <div class="form-row">
             <div class="col-6 col-md-3 mb-3 form-group pl-3 ">
               <label for="validationHab">Habitação</label>
-              <select class="form-control" [class.ng-touched]="showAlert" [(ngModel)]="lead.tipohabitacao" name="tipohabitacao" #hab="ngModel" id="validationHab" required>
+              <select class="form-control" [class.ng-touched]="showAlert" [(ngModel)]="lead.tipohabitacao"
+               name="tipohabitacao" #hab="ngModel" id="validationHab" required  [disabled]="readOnly">
                 <option *ngFor="let h of habitacoes" [ngValue]="h.id">{{h.nome}}</option>
               </select>
               <div class="alert alert-danger" *ngIf="!hab.valid && hab.touched">
@@ -135,7 +145,7 @@
             <div class="col-3 col-md-2 mb-3 form-group pl-3">
               <label for="validationDesdeH">Desde</label>
               <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationDesdeH" placeholder="ano" name="anoiniciohabitacao"
-                [(ngModel)]="lead.anoiniciohabitacao" #anohabitacao="ngModel" min="1900" max="2030" required>
+                [(ngModel)]="lead.anoiniciohabitacao" #anohabitacao="ngModel" min="1900" max="2030" required [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!anohabitacao.valid && anohabitacao.touched">
                 Obrigatório
               </div>
@@ -144,7 +154,7 @@
             <div class="col-3 col-md-2 mb-3 form-group pl-3">
               <label for="validationValor">Valor</label>
               <input type="number" class="form-control" id="validationValor" name="valorhabitacao" [(ngModel)]="lead.valorhabitacao" 
-                  #valorhabitacao="ngModel"  [class.ng-touched]="showAlert" [required]="hab.value=='1' || hab.value=='3'">
+                  #valorhabitacao="ngModel"  [class.ng-touched]="showAlert" [required]="hab.value=='1' || hab.value=='3'"  [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!valorhabitacao.valid && valorhabitacao.touched">
                 Obrigatório
               </div>
@@ -156,12 +166,13 @@
             <div class="col-6 col-md-2 mb-3 form-group pl-3">
               <label for="validationOC">Outros Créditos</label>
               <input type="number" class="form-control" id="validationOC" name="ocValor" [(ngModel)]="lead.ocValor" #ocValor="ngModel"
-                placeholder="total">
+                placeholder="total"  [readonly]="readOnly">
             </div>
 
             <div class="col-6 col-md-2 mb-3 form-group pl-3">
               <label for="validationOR">Prestação Mensal </label>
-              <input type="number" class="form-control" id="validationOR" name="ocPrestacao" [(ngModel)]="lead.ocPrestacao" #ocPrestacao="ngModel" placeholder="total" [required]="ocValor.value > 0">
+              <input type="number" class="form-control" id="validationOR" name="ocPrestacao" 
+              [(ngModel)]="lead.ocPrestacao" #ocPrestacao="ngModel" placeholder="total" [required]="ocValor.value > 0" [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!ocPrestacao.valid && ocPrestacao.touched && ocValor.valid">
                 Obrigatório
               </div>
@@ -172,8 +183,8 @@
           <div class="form-row">
           <div class="form-group pl-3">
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" #prop="ngModel" name="segundoproponente" [(ngModel)]="lead.segundoproponente" [checked]="lead.segundoproponente"
-                (change)="clear2Prop(prop.value)" id="segundoProp">
+              <input class="form-check-input" type="checkbox" #prop="ngModel" name="segundoproponente" [(ngModel)]="lead.segundoproponente" 
+                (change)="clear2Prop(prop.value)" id="segundoProp"  [disabled]="readOnly">
               <label class="form-check-label" for="segundoProp">
                 Pretendo incluir um segundo titular
               </label>
@@ -185,21 +196,24 @@
           <div class="form-row" *ngIf="lead.segundoproponente">
             <div class="col-xs-12 col-md-4 mb-3 form-group pl-3">
               <label for="validationNome2">Nome</label>
-              <input type="text" class="form-control" [class.ng-touched]="showAlert" id="validationNome2"  name="nome2" [(ngModel)]="lead.nome2" #nome2="ngModel" [required]="prop">
+              <input type="text" class="form-control" [class.ng-touched]="showAlert" id="validationNome2" 
+               name="nome2" [(ngModel)]="lead.nome2" #nome2="ngModel" [required]="prop" [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!nome2.valid && nome2.touched">
                 Obrigatório
               </div>
             </div>
             <div class="col-3 col-md-1 mb-3 form-group pl-3">
               <label for="validationIdade2">Idade</label>
-              <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationIdade2" name="idade2" [(ngModel)]="lead.idade2" #idade2="ngModel" [required]="prop">
+              <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationIdade2"
+               name="idade2" [(ngModel)]="lead.idade2" #idade2="ngModel" [required]="prop" [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!idade2.valid && idade2.touched">
                 Obrigatório
               </div>
             </div>
             <div class="col-5 col-md-2 mb-3 form-group pl-3">
               <label for="validaTelefone2">Telefone</label>
-              <input type="tel" class="form-control" id="validaTelefone2" [class.ng-touched]="showAlert" name="telefone2" [(ngModel)]="lead.telefone2" #telefone2="ngModel" [required]="prop" minlength="9">
+              <input type="tel" class="form-control" id="validaTelefone2" [class.ng-touched]="showAlert" name="telefone2" 
+                  [(ngModel)]="lead.telefone2" #telefone2="ngModel" [required]="prop" minlength="9" [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!telefone2.valid && telefone2.touched">
                 Obrigatório
               </div>
@@ -207,15 +221,15 @@
             <div class="col-4 col-md-2 mb-3 form-group pl-3">
               <label for="validaNIF2">NIF</label>
               <input type="tel" class="form-control" [class.ng-touched]="showAlert" id="validaNIF2" name="nif2" [(ngModel)]="lead.nif2" #nif2="ngModel"
-                [required]="prop" minlength="9">
+                [required]="prop" minlength="9" [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!nif2.valid && nif2.touched">
                 Obrigatório
               </div>
             </div>
             <div class="col-12 col-md-4 mb-3 form-group pl-3">
               <label for="validationRelacao">Relação com Proponente</label>
-              <select class="form-control" [class.ng-touched]="showAlert" name="relacaofamiliar" [(ngModel)]="lead.relacaofamiliar" #relacaofamiliar="ngModel" id="validationRelacao"
-                [required]="prop">
+              <select class="form-control" [class.ng-touched]="showAlert" name="relacaofamiliar" [(ngModel)]="lead.relacaofamiliar"
+                 #relacaofamiliar="ngModel" id="validationRelacao" [required]="prop" [disabled]="readOnly">
                 <option *ngFor="let r of relacoes" [ngValue]="r.id">{{r.descricao}}</option>
               </select>
               <div class="alert alert-danger" *ngIf="!relacaofamiliar.valid && relacaofamiliar.touched">
@@ -224,7 +238,8 @@
             </div>
             <div class="col-6 col-md-4 mb-3 form-group pl-3">
               <label for="validationProfissao2">Situação Profissional</label>
-              <select class="form-control"  [class.ng-touched]="showAlert" [(ngModel)]="lead.tipocontrato2" name="tipocontrato2" #tipocontrato2="ngModel" id="validationProfissao2" [required]="prop">
+              <select class="form-control"  [class.ng-touched]="showAlert" [(ngModel)]="lead.tipocontrato2" name="tipocontrato2" 
+              #tipocontrato2="ngModel" id="validationProfissao2" [required]="prop" [disabled]="readOnly">
                 <option *ngFor="let s of situacoes" [ngValue]="s.id">{{s.nome}}</option>
               </select>
               <div class="alert alert-danger" *ngIf="!tipocontrato2.valid && tipocontrato2.touched">
@@ -233,14 +248,16 @@
             </div>
             <div class="col-3 col-md-1 mb-3 form-group pl-3">
               <label for="validationVenc2">Vencimento</label>
-              <input type="number" class="form-control"  [class.ng-touched]="showAlert" id="validationVenc2" name="vencimento2" [(ngModel)]="lead.vencimento2" #vencimento2="ngModel" [required]="prop">
+              <input type="number" class="form-control"  [class.ng-touched]="showAlert" id="validationVenc2" name="vencimento2"
+                  [(ngModel)]="lead.vencimento2" #vencimento2="ngModel" [required]="prop" [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!vencimento2.valid && vencimento2.touched">
                 Obrigatório
               </div>
             </div>
             <div class="col-3 col-md-1 mb-3 form-group pl-3">
               <label for="validationDesde2">Desde</label>
-              <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationDesde2" name="anoinicio2" [(ngModel)]="lead.anoinicio2" #anoinicio2="ngModel" placeholder="ano" [required]="prop">
+              <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationDesde2" name="anoinicio2" 
+              [(ngModel)]="lead.anoinicio2" #anoinicio2="ngModel" placeholder="ano" [required]="prop" [readonly]="readOnly">
               <div class="alert alert-danger" *ngIf="!anoinicio2.valid && anoinicio2.touched">
                 Obrigatório
               </div>
