--- a/src/app/docs/docs.component.html
+++ b/src/app/docs/docs.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="header d-flex justify-content-end align-items-center">
-        <div class="text-header mr-5">
-          <h2 class="text-center d-none d-md-flex">Documentação Necessária</h2>
-        </div>
-      </div>
-      
+  <div class="header d-flex justify-content-end align-items-center">
+    <div class="text-header mr-5">
+      <h2 class="text-center d-none d-md-flex">Documentação Necessária</h2>
+    </div>
+  </div>
+
   <p class="m-5">Para que o processo possa ser submetido para aprovação é necessária a seguinte
-      documentação:</p>
+    documentação:</p>
 
   <div class="text-doc">
     <div class="list-group mb-1" *ngFor="let d of docList">
@@ -14,11 +14,12 @@
         <div class="d-flex justify-content-between" style="width:100%">
           <a *ngIf="d.recebido==1" routerLink="/show" [queryParams]="{lead: d.lead, ln: d.linha}"
             class="list-group-item list-group-item-action d-flex justify-content-between  d-flex align-items-center">
-            <div>{{d.nomedoc}}<br/><small>{{d.descricao}}</small></div>
+            <div>{{d.nomedoc}}<br /><small>{{d.descricao}}</small></div>
             <span class="fa fa-check text-success" *ngIf="d.recebido==1"> </span>
           </a>
         </div>
-        <div class="flex-1 d-flex align-content-stretch" *ngIf="d.status==8 || d.status==9 || d.status==21 || d.status==38"
+        <div class="flex-1 d-flex align-content-stretch"
+          *ngIf="d.status==8 || d.status==9 || d.status==21 || d.status==38"
           title="Anexar outro ficheiro para este documento!">
           <!--botão para anexar outro -->
           <a *ngIf="d.recebido==1" class="list-group-item list-group-item-action d-flex align-items-center"
@@ -29,12 +30,18 @@
       </div>
       <a *ngIf="d.recebido==0" href="#" class="list-group-item list-group-item-action" routerLink="/capture"
         [queryParams]="{lead: d.lead, linha: d.linha}">
-        <div style="width:82%">{{d.nomedoc}}<br/><small>{{d.descricao}}</small> </div>
+        <div style="width:82%">{{d.nomedoc}}<br /><small>{{d.descricao}}</small> </div>
         <span class="fa fa-upload text-info pull-right"><small> Anexar</small></span>
       </a>
     </div>
     <div class="text-center mt-3">
-      <button class="btn btn-outline-warning" *ngIf="!missingDocs && showBtnFinalizar" (click)="finalizar()">Finalizar</button>
+      <button class="btn btn-outline-warning" *ngIf="!missingDocs && showBtnFinalizar"
+        (click)="finalizar()">Finalizar</button>
+    </div>
+    <!-- Documento Extra-->
+    <div class="text-center mt-3">
+      <button class="btn btn-outline-warning" *ngIf="!missingDocs && !showBtnFinalizar"
+        (click)="addDocExtra()">Adicionar Documento Extra</button>
     </div>
   </div>
 
@@ -45,4 +52,3 @@
   </div>
 
 </div>
-
